force-app/main/default/objects/COM_FacilityBDXLineItem__c/COM_FacilityBDXLineItem__c.object-meta.xml
<CustomObject>
    <description>Facility BDX Line Items</description>
    <label>Facility BDX Line Item</label>
    <nameField>
        <displayFormat>FBLI_{00000000}</displayFormat>
        <label>Facility BDX Line Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility BDX Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>