force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/Account_lk__c.field-meta.xml
<CustomField>
    <fullName>Account_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SOALineItemsByAccount</relationshipName>
    <type>Lookup</type>
</CustomField>