force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/AccountRefNo_fm__c.field-meta.xml
<CustomField>
    <fullName>AccountRefNo_fm__c</fullName>
    <formula>IF( TEXT( FacilityBDX_md__r.BDXType__c )= &apos;Debit&apos;,  Note_lk__r.Placement_lk__r.CedantRefNo__c  , Note_lk__r.UnderwriterRefNo_fm__c)</formula>
    <label>Account Ref No</label>
    <type>Text</type>
</CustomField>