force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/CedantClaimNo_fm__c.field-meta.xml
<CustomField>
    <fullName>CedantClaimNo_fm__c</fullName>
    <formula>Claim_lk__r.CedantClaimNo__c</formula>
    <label>Cedant Claim No.</label>
    <type>Text</type>
</CustomField>