force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/Claim_lk__c.field-meta.xml
<CustomField>
    <fullName>Claim_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Claim</referenceTo>
    <relationshipName>SOA_LineItems</relationshipName>
    <type>Lookup</type>
</CustomField>