force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/ClaimAllocation_lk__c.field-meta.xml
<CustomField>
    <fullName>ClaimAllocation_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Allocation</label>
    <referenceTo>CLM_Allocation__c</referenceTo>
    <relationshipName>SOALineItemsAsClaimAllocation</relationshipName>
    <type>Lookup</type>
</CustomField>