force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/ClosingSlip_is__c.field-meta.xml
<CustomField>
    <fullName>ClosingSlip_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closing Slip</label>
    <type>Checkbox</type>
</CustomField>