force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/CoverNote_is__c.field-meta.xml
<CustomField>
    <fullName>CoverNote_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cover Note</label>
    <type>Checkbox</type>
</CustomField>