force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/ExpirationDate_fm__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate_fm__c</fullName>
    <formula>Placement_lk__r.ExpirationDate__c</formula>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>