force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/FacilityBDX_md__c.field-meta.xml
<CustomField>
    <fullName>FacilityBDX_md__c</fullName>
    <label>Facility BDX</label>
    <referenceTo>COM_FacilityBDX__c</referenceTo>
    <relationshipLabel>Facility BDX Line Items</relationshipLabel>
    <relationshipName>SOA_LineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>