force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/GrossPrem_fm__c.field-meta.xml
<CustomField>
    <fullName>GrossPrem_fm__c</fullName>
    <formula>Note_lk__r.GrossPrem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Prem (100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>