force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/Insured_fm__c.field-meta.xml
<CustomField>
    <fullName>Insured_fm__c</fullName>
    <formula>CASESAFEID(Placement_lk__r.OriginalInsured_lk__c)</formula>
    <label>Insured</label>
    <type>Text</type>
</CustomField>