force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/InsuredNm_fm__c.field-meta.xml
<CustomField>
    <fullName>InsuredNm_fm__c</fullName>
    <formula>Placement_lk__r.OriginalInsured_lk__r.Name</formula>
    <label>Original Insured</label>
    <type>Text</type>
</CustomField>