force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/LKRefNo_fm__c.field-meta.xml
<CustomField>
    <fullName>LKRefNo_fm__c</fullName>
    <formula>Placement_lk__r.LKRefNoh__c</formula>
    <label>LK Ref No</label>
    <type>Text</type>
</CustomField>