force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/NetShare_fm__c.field-meta.xml
<CustomField>
    <fullName>NetShare_fm__c</fullName>
    <formula>Note_lk__r.NetToLKPrem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>