force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/Note_is__c.field-meta.xml
<CustomField>
    <fullName>Note_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Note (D/C, SOC)</label>
    <type>Checkbox</type>
</CustomField>