force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/Note_lk__c.field-meta.xml
<CustomField>
    <fullName>Note_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Note</label>
    <referenceTo>COM_Note__c</referenceTo>
    <relationshipLabel>Facility BDX Line Items</relationshipLabel>
    <relationshipName>FacilityBDXLineItemsByNote</relationshipName>
    <type>Lookup</type>
</CustomField>