force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/OriginAmount_fm__c.field-meta.xml
<CustomField>
    <fullName>OriginAmount_fm__c</fullName>
    <formula>Note_lk__r.NoteAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>