force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/OriginCurrency_fm__c.field-meta.xml
<CustomField>
    <fullName>OriginCurrency_fm__c</fullName>
    <formula>TEXT(Note_lk__r.OriginCurrency__c)</formula>
    <label>Origin Currency</label>
    <type>Text</type>
</CustomField>