force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/Particular_fm__c.field-meta.xml
<CustomField>
    <fullName>Particular_fm__c</fullName>
    <formula>Note_lk__r.NoteParticular__c</formula>
    <label>Particular</label>
    <type>Text</type>
</CustomField>