force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/Placement_lk__c.field-meta.xml
<CustomField>
    <fullName>Placement_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Facility BDX Line Items</relationshipLabel>
    <relationshipName>SOALineItems</relationshipName>
    <type>Lookup</type>
</CustomField>