force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/PlacementLineItem_lk__c.field-meta.xml
<CustomField>
    <fullName>PlacementLineItem_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Line Item</label>
    <referenceTo>PlacementLineItem__c</referenceTo>
    <relationshipName>SOALineItemsAsPlacementLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>