force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/PremCurrency_fm__c.field-meta.xml
<CustomField>
    <fullName>PremCurrency_fm__c</fullName>
    <formula>TEXT(Note_lk__r.OriginCurrency__c)</formula>
    <label>Prem Currency</label>
    <type>Text</type>
</CustomField>