force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/PremOnLKShare_fm__c.field-meta.xml
<CustomField>
    <fullName>PremOnLKShare_fm__c</fullName>
    <formula>GrossPrem_fm__c * TotalOrderPct_fm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prem on LK Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>