force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/SOCCedant_is__c.field-meta.xml
<CustomField>
    <fullName>SOCCedant_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOC from Cedant</label>
    <type>Checkbox</type>
</CustomField>