force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/TotalDeduction_fm__c.field-meta.xml
<CustomField>
    <fullName>TotalDeduction_fm__c</fullName>
    <formula>Note_lk__r.TotalDeductionAmt_fm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>