force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/TotalDeductionPct_fm__c.field-meta.xml
<CustomField>
    <fullName>TotalDeductionPct_fm__c</fullName>
    <formula>Note_lk__r.TotalDeductionPct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deductions (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>