force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/TotalOrderPct_fm__c.field-meta.xml
<CustomField>
    <fullName>TotalOrderPct_fm__c</fullName>
    <formula>Placement_lk__r.TotalOrderPct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Order (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>