force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/TransationType_fm__c.field-meta.xml
<CustomField>
    <fullName>TransationType_fm__c</fullName>
    <formula>TEXT(Placement_lk__r.TransactionType__c)</formula>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>