force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/TSIAmountSlip_fm__c.field-meta.xml
<CustomField>
    <fullName>TSIAmountSlip_fm__c</fullName>
    <formula>TSIByLocation_lk__r.SlipTSI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>