force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/TSIByLocation_lk__c.field-meta.xml
<CustomField>
    <fullName>TSIByLocation_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TSI by Location</label>
    <referenceTo>OPP_TSIByLocation__c</referenceTo>
    <relationshipName>SOALineItemsByTSIByLocation</relationshipName>
    <type>Lookup</type>
</CustomField>