force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/TSICurrencySlip_fm__c.field-meta.xml
<CustomField>
    <fullName>TSICurrencySlip_fm__c</fullName>
    <formula>TEXT(TSIByLocation_lk__r.TSICurrency__c)</formula>
    <label>TSI Currency</label>
    <type>Text</type>
</CustomField>