force-app/main/default/objects/COM_FacilityBDXLineItem__c/fields/UY_fm__c.field-meta.xml
<CustomField>
    <fullName>UY_fm__c</fullName>
    <formula>TEXT(Placement_lk__r.UY__c)</formula>
    <label>UY</label>
    <type>Text</type>
</CustomField>